# tetris2048

./: .copilotignore  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  Tetris2048_Game.spec  pyproject.toml  pyrightconfig.json  requirements-dev.txt
.github/workflows/: build.yml  lint.yml  security.yml  test.yml
build_scripts/: __init__.py  build_pyinstaller.py
src/tetris2048/: __init__.py  __main__.py
src/tetris2048/core/: __init__.py  point.py  tile.py
src/tetris2048/game/: __init__.py  game_engine.py  game_grid.py  tetromino.py
src/tetris2048/rendering/: __init__.py  color.py  picture.py  stddraw.py  tile_palette.py
