[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris2048"
version = "0.0.0"
description = "Project for the COMP 204 Programming Studio course at MEF University. This Python 3 application integrates mechanics from Tetris and 2048"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pygame",
    "numpy",
]
keywords = [
    "tetris",
    "2048",
    "pygame",
    "game",
    "education",
]

authors = [
    { name = "Ertan Tunç Türk", email = "turke@mef.edu.tr" },
]

maintainers = [
    { name = "Ertan Tunç Türk", email = "turke@mef.edu.tr" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "bandit",
    "pre-commit",
    "pip-audit",
    "pytest",
    "pytest-cov",
    "pytest-xdist"
]

[project.urls]
Homepage = "https://github.com/ertanturk/tetris2048"
Repository = "https://github.com/ertanturk/tetris2048"
Documentation = "https://github.com/ertanturk/tetris2048#readme"
Issues = "https://github.com/ertanturk/tetris2048/issues"

[project.scripts]
tetris2048 = "tetris2048.game.game_engine:main"

[tool.ruff]
line-length = 88
fix = true
indent-width = 8
target-version = "py312"
exclude = ["build/", ".venv/"]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "W191", "D206"]
per-file-ignores = { "src/tetris2048/rendering/stddraw.py" = ["N802", "N816", "N812", "ERA001", "D205", "TRY002", "A002", "A001", "N806"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["build/", ".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v --tb=short --strict-markers --maxfail=1 --showlocals --cov=tetris2048 --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
minversion = "7.0"
python_files = ["test_*.py"]
filterwarnings = ["default"]
log_cli = false
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
source = ["tetris2048"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []
