[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris2048"
version = "0.0.0"
description = "Project for the COMP 204 Programming Studio course at MEF University. This Python 3 application integrates mechanics from Tetris and 2048"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pygame",
    "numpy",
]
keywords = [
    "tetris",
    "2048",
    "pygame",
    "game",
    "education",
]

authors = [
    { name = "Ertan Tunç Türk", email = "turke@mef.edu.tr" },
]

maintainers = [
    { name = "Ertan Tunç Türk", email = "turke@mef.edu.tr" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "bandit",
    "pre-commit",
    "pip-audit",
    "pytest",
    "pytest-cov",
    "pytest-xdist"
]
packaging = [
    "pyinstaller>=5.10",
    "pyinstaller-hooks-contrib>=2024.2",
]

[project.urls]
Homepage = "https://github.com/ertanturk/tetris2048"
Repository = "https://github.com/ertanturk/tetris2048"
Documentation = "https://github.com/ertanturk/tetris2048#readme"
Issues = "https://github.com/ertanturk/tetris2048/issues"

[project.scripts]
tetris2048 = "tetris2048.game.game_engine:main"

[tool.ruff]
line-length = 88
fix = true
indent-width = 8
target-version = "py312"
exclude = ["build/", ".venv/"]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "W191", "D206"]
per-file-ignores = { "src/tetris2048/rendering/stddraw.py" = ["N802", "N816", "N812", "ERA001", "D205", "TRY002", "A002", "A001", "N806"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["build/", ".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v --tb=short --strict-markers --maxfail=1 --showlocals --cov=tetris2048 --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
minversion = "7.0"
python_files = ["test_*.py"]
filterwarnings = ["default"]
log_cli = false
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
source = ["tetris2048"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.12"
exclude = [
    "**/build",
    "**/.venv",
    "**/*.egg-info"
]
reportMissingTypeStubs = false
reportAny = false
reportUnusedCallResult = false
reportUnnecessaryComparison = false
reportUnnecessaryIsInstance = false
reportPrivateUsage = false
reportUnreachable = false
reportUndefinedVariable = true
reportIncompatibleMethodOverride = true

# PyInstaller configuration hints.
# This section is informational and helps document how to produce standalone
# executables for Windows, Linux and macOS using the optional 'packaging' extras
# defined above. Install via pip using the project's lockfile (uv.lock) to get
# the pinned versions, e.g.:
#   python -m pip install --upgrade pip
#   python -m pip install ".[packaging]" --use-feature=truststore
#
# Then build with PyInstaller. Example CLI recommended for cross-platform builds:
#   python -m PyInstaller --name tetris2048 --onefile --add-data "tetris2048/images:images" tetris2048/__main__.py
#
# If you want to centralize options, you can create a `pyinstaller.spec` file in
# your repo root. Suggested spec settings:
[tool.pyinstaller]
# Entry point callable for reference (used for documentation; PyInstaller uses modules/scripts)
entry_point = "tetris2048.game.game_engine:main"
name = "tetris2048"
onefile = true
windowed = false
# Path to an icon file (optional). If you don't have one, remove or adjust this.
icon = "tetris2048/images/icon.ico"
# Files/folders to include (source:destination). Use platform-appropriate separators when invoking PyInstaller on each OS.
additional_data = [
    "tetris2048/images:images",
]
# If your runtime imports are hidden from static analysis, list them here:
hidden_imports = [
    "pygame",
]
# Platforms this config targets (informational only)
platforms = ["windows", "linux", "macos"]

# Recommended notes:
# - Use the `packaging` extra (which includes PyInstaller) and install with pip using the repository's uv.lock to match versions.
# - On Windows, build on Windows to get a native .exe. On macOS, build on macOS for a native app/bundle.
# - For reproducible builds across CI, install the locked dependencies from uv.lock into a clean venv and run the PyInstaller command above.
